ticket 관련 데이터 변경

--- a/app/src/main/res/layout/view_ticket.xml
+++ b/app/src/main/res/layout/view_ticket.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="ticket"
-            type="com.songilcraft.sagak_sagak.data.TestTicket" />
+            type="com.songilcraft.sagak_sagak.data.Ticket" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
