--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="black_trans_80">#CC000000</color>
     <color name="gray_50">#EBEDF0</color>
+    <color name="point">#B4A4EF</color>
 </resources>
