--- a/app/src/main/res/layout/view_ticket.xml
+++ b/app/src/main/res/layout/view_ticket.xml
@@ -88,12 +88,20 @@
             android:layout_height="36dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/shape_circle_gray_d9"
+            android:background="@drawable/shape_circle_point"
             android:elevation="4dp"
             android:layout_margin="4dp"
             android:gravity="center"
             android:visibility="invisible"
             tools:text="3"/>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="1.5dp"
+            android:elevation="4dp"
+            android:layerType="software"
+            android:src="@drawable/dash_line"
+            app:layout_constraintTop_toBottomOf="@id/layout_top" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
