--- a/app/src/main/res/layout/dialog_home_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_home_bottom_sheet.xml
@@ -1,43 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingVertical="2dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/home_bottom_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="폴더"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="HardcodedText" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingVertical="2dp">
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/home_bottom_title_category_cg"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_bottom_title"/>
+        <TextView
+            android:id="@+id/home_bottom_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="폴더"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="40dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="HardcodedText" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/home_bottom_total_category_cg"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_bottom_title_category_cg"/>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/home_bottom_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_back"
+            android:layout_marginEnd="34dp"
+            app:layout_constraintTop_toTopOf="@+id/home_bottom_title"
+            app:layout_constraintBottom_toBottomOf="@+id/home_bottom_title"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/home_bottom_title_category_cg"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_bottom_title"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#C4C8CC"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/home_bottom_title_category_cg"/>
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/home_bottom_total_category_cg"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_bottom_title_category_cg"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/home_bottom_add_category_cl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_chip_white"
+            android:layout_marginBottom="40dp"
+            android:paddingVertical="8dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="12dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/home_bottom_add_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_add"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/home_bottom_add_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="추가하기"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginStart="7.03dp"
+                app:layout_constraintStart_toEndOf="@id/home_bottom_add_iv"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:ignore="HardcodedText" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
