--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
             android:id="@+id/home_top_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="30dp"
+            android:paddingBottom="10dp"
             android:background="@drawable/shape_bottom_radius_30"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -20,23 +20,21 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/home_search_iv"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:src="@drawable/ic_search"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:padding="10dp"
+                android:padding="14dp"
+                android:layout_margin="4dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/home_calender_iv"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:src="@drawable/ic_calender"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:padding="10dp"
+                android:padding="14dp"
+                android:layout_marginTop="4dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/home_search_iv"/>
 
@@ -49,17 +47,26 @@
                 android:textSize="22sp"
                 android:textStyle="bold"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@+id/home_search_iv"
                 app:layout_constraintStart_toStartOf="parent"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintBottom_toTopOf="@id/home_select_category_iv"
+                android:layout_marginBottom="10dp"
+                android:background="#EBEDF0"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/home_select_category_iv"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
+                android:padding="10dp"
                 android:src="@drawable/ic_filter"
+                android:background="@drawable/shape_chip_white"
                 app:layout_constraintTop_toBottomOf="@id/home_title_tv"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -88,7 +95,7 @@
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         android:background="@drawable/shape_chip_white"
-                        android:backgroundTint="@color/black"
+                        android:backgroundTint="@color/point"
                         android:paddingVertical="10dp"
                         android:paddingHorizontal="20dp"
                         android:layout_marginEnd="15dp"/>
@@ -146,9 +153,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/home_ticket_rv"
                 android:layout_width="match_parent"
+                android:padding="8dp"
                 android:layout_height="0dp"
-                android:layout_marginVertical="30dp"
-                android:layout_marginHorizontal="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
