--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -60,6 +60,17 @@
                     app:layout_constraintStart_toEndOf="@+id/profile_image_iv"
                     app:layout_constraintBottom_toBottomOf="parent"/>
 
+                <TextView
+                    android:id="@+id/profile_logout_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="로그아웃"
+                    android:textSize="15sp"
+                    android:layout_marginEnd="20dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/profile_setting_iv"/>
+
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/profile_setting_iv"
                     android:layout_width="25dp"
